--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Dr. Janak Appointment System for appointment scheduling" />
-    <meta name="theme-color" content="#3b82f6" />
-    <link rel="apple-touch-icon" href="/icon-192.png" />
+    <meta name="description" content="Dr. Janak's Clinic Appointment Management System" />
+    <meta name="theme-color" content="#6366f1" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Dr. Janak Appointments</title>
+    <title>Dr. Janak's Clinic - Appointments</title>
+    
+    <!-- Preconnect to improve performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    
+    <!-- Inter font -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
